--- a/templates/accounts/invoice.html
+++ b/templates/accounts/invoice.html
@@ -69,6 +69,13 @@
                                                 <th colspan="2" class="text-right">Sub Total:</th>
                                                 <th class="text-center">${{total}}</th>
                                             </tr>
+                                             
+                                            <tr>
+                                                <th colspan="2" class="text-right">Discount:</th>
+                                                <th class="text-center">${{ discount_a }}</th>
+                                            </tr>
+                                            
+                                            
                                             <tr>
                                                 <th colspan="2" class="text-right">Tax:</th>
                                                 <th class="text-center">${{order.tax|floatformat:2}}</th>
