--- a/templates/order/order_complete.html
+++ b/templates/order/order_complete.html
@@ -85,6 +85,10 @@
                                                 <th class="text-center">${{total}}</th>
                                             </tr>
                                             <tr>
+                                                <th colspan="2" class="text-right">Discount:</th>
+                                                <th class="text-center">${{discount_a}}</th>
+                                            </tr>
+                                            <tr>
                                                 <th colspan="2" class="text-right">Tax:</th>
                                                 <th class="text-center">${{order.tax}}</th>
                                             </tr>
